# jupyter_releaser

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
.github/actions/check-links/: action.yml
.github/actions/check-release/: action.yml
.github/actions/common/: action.yml
.github/actions/draft-changelog/: action.yml
.github/actions/draft-release/: action.yml
.github/actions/finalize-release/: action.yml
.github/actions/install-releaser/: action.yml
.github/actions/populate-release/: action.yml
.github/actions/prep-release/: action.yml
.github/actions/publish-changelog/: action.yml
.github/actions/publish-release/: action.yml
.github/scripts/: bump_tag.sh  install-releaser.sh
.github/workflows/: autopublish-release.yml  cancel.yml  check-release.yml  draft-changelog.yml  draft-release.yml  finalize-release.yml  full-release.yml  generate-changelog.yml  prep-release.yml  prep-self-release.yml  publish-changelog.yml  publish-release.yml  publish-self-release.yml  test.yml
docs/: conf.py  environment.yml  index.md  index.rst
docs/background/: index.rst
docs/how_to_guides/: index.rst  write_config.md
docs/reference/: api_docs.rst
docs/source/: conf.py  index.md  index.rst
docs/source/background/: index.md  theory.md
docs/source/faq/: index.md
docs/source/get_started/: generate_changelog.md  index.md  index.rst  making_first_release.md  making_release_from_releaser.md  making_release_from_repo.md
docs/source/how_to_guides/: convert_repo.md  convert_repo_from_releaser.md  convert_repo_from_repo.md  index.md  index.rst  maintain_fork.md  write_config.md
docs/source/reference/: api_docs.md  api_docs.rst  configuration.md  faq.md  index.md  index.rst  releaser_cli.md  releaser_cli.rst  theory.md
example-workflows/: full-release.yml  prep-release.yml  publish-changelog.yml  publish-release.yml
jupyter_releaser/: __init__.py  __main__.py  changelog.py  cli.py  lib.py  mock_github.py  npm.py  python.py  schema.json  tee.py  util.py
jupyter_releaser/actions/: check_links.py  common.py  draft_changelog.py  draft_release.py  finalize_release.py  generate-changelog.py  generate_changelog.py  populate_assets.py  populate_release.py  prep_release.py  publish_changelog.py  publish_release.py
jupyter_releaser/tests/: conftest.py  test_changelog.py  test_cli.py  test_functions.py  test_mock_github.py  util.py
tests/: conftest.py  test_changelog.py  test_cli.py  test_functions.py  util.py
