[metadata]
name = jupyter_releaser
version = attr: jupyter_releaser.__version__
description = Jupyter Releaser for Python and/or npm packages.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://jupyter.org
platforms = Linux, Mac OS X, Windows
keywords = ipython, jupyter
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    build
    check-manifest
    click
    ghapi
    github-activity~=0.1
    pre-commit
    pypiserver
    pytest-check-links>=0.5
    requests
    requests_cache
    setuptools
    tomlkit==0.7.0
    tbump==6.3.2
    toml==0.10.2
    twine

[options.extras_require]
test = coverage; pytest; pytest-cov; pytest-mock

[options.entry_points]
console_scripts =
    jupyter-releaser = jupyter_releaser.cli:main

[flake8]
ignore = E, C, W, F401, F403, F811, F841, E402, I100, I101, D400
builtins = c, get_config
exclude =
    .cache,
    .github,
    docs,
    setup.py
