[metadata]
name = jupyter_releaser
version = attr: jupyter_releaser.__version__
description = Jupyter Releaser for Python and/or npm packages.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
author = Jupyter Development Team
author_email = jupyter@googlegroups.com
url = https://jupyter.org
platforms = Linux, Mac OS X, Windows
keywords = ipython, jupyter
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    "" = "jupyter_releaser"
python_requires = >=3.7
install_requires =
    build
    check-manifest
    click
    ghapi
    github-activity~=0.2
    importlib_resources
    jsonschema>=3.0.1
    packaging
    pkginfo
    pre-commit
    pypiserver
    pytest-check-links>=0.7
    requests
    requests_cache
    tbump~=6.7
    toml~=0.10
    twine

[options.extras_require]
test =
    coverage
    pytest>=7.0
    pytest-cov
    pytest-mock

[options.entry_points]
console_scripts =
    jupyter-releaser = jupyter_releaser.cli:main

[flake8]
ignore = E501, W503, E402
builtins = c, get_config
exclude =
    .cache,
    .github,
    docs,
    setup.py
enable-extensions = G
extend-ignore =
    G001, G002, G004, G200, G201, G202,
    # black adds spaces around ':'
    E203,
per-file-ignores =
    # B011: Do not call assert False since python -O removes these calls
    # F841 local variable 'foo' is assigned to but never used
    jupyter_releaser/tests/*: B011, F841
